; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/media/imx/extr_imx-media-fim.c_imx_media_fim_eof_monitor.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/media/imx/extr_imx-media-fim.c_imx_media_fim_eof_monitor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.imx_media_fim = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @imx_media_fim_eof_monitor(%struct.imx_media_fim* %0, i32 %1) #0 {
  %3 = alloca %struct.imx_media_fim*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store %struct.imx_media_fim* %0, %struct.imx_media_fim** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.imx_media_fim*, %struct.imx_media_fim** %3, align 8
  %7 = getelementptr inbounds %struct.imx_media_fim, %struct.imx_media_fim* %6, i32 0, i32 0
  %8 = load i64, i64* %5, align 8
  %9 = call i32 @spin_lock_irqsave(i32* %7, i64 %8)
  %10 = load %struct.imx_media_fim*, %struct.imx_media_fim** %3, align 8
  %11 = call i32 @icap_enabled(%struct.imx_media_fim* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %17, label %13

13:                                               ; preds = %2
  %14 = load %struct.imx_media_fim*, %struct.imx_media_fim** %3, align 8
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @frame_interval_monitor(%struct.imx_media_fim* %14, i32 %15)
  br label %17

17:                                               ; preds = %13, %2
  %18 = load %struct.imx_media_fim*, %struct.imx_media_fim** %3, align 8
  %19 = getelementptr inbounds %struct.imx_media_fim, %struct.imx_media_fim* %18, i32 0, i32 0
  %20 = load i64, i64* %5, align 8
  %21 = call i32 @spin_unlock_irqrestore(i32* %19, i64 %20)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @icap_enabled(%struct.imx_media_fim*) #1

declare dso_local i32 @frame_interval_monitor(%struct.imx_media_fim*, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
